--- a/src/main/resources/templates/deleteStudent.html
+++ b/src/main/resources/templates/deleteStudent.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Delete Child</title>
-    <link rel="stylesheet" th:href="@{/css/deletechild.css}" href="../static/css/deletechild.css" >
+    <title>Delete Student</title>
+    <link rel="stylesheet" th:href="@{/css/deleteStudent.css}" href="../static/css/deleteStudent.css" >
 </head>
 <body>
 <div class="container">
-    <h1>Delete Child Record</h1>
-    <form action="#" th:action="@{/deleteChild}" method="post">
-        <label for="childId">Child ID:</label>
-        <input type="number" id="childId" name="childId" required />
+    <h1>Delete Student Record</h1>
+    <form action="#" th:action="@{/deleteStudent}" method="post">
+        <label for="studentId">Student ID:</label>
+        <input type="number" id="studentId" name="studentId" required />
         <button type="submit">Delete</button>
     </form>
     <div th:if="${successMessage}" class="success">
