--- a/src/main/resources/templates/studentRegistration.html
+++ b/src/main/resources/templates/studentRegistration.html
@@ -56,21 +56,21 @@
 <body>
 <div class="container">
     <h2>Welcome to Enrollment Page</h2>
-    <form th:action="@{/childRegister}" th:object="${child}" method="post">
+    <form th:action="@{/studentRegister}" th:object="${student}" method="post">
 
         <!--        <input type="hidden" id="parentId" name="parentId" th:value="${parentId}">-->
 
-        <label for="name">Child Name:</label>
-        <input type="text" id="name" name="name" th:field="*{childName}" required>
+        <label for="name">Student Name:</label>
+        <input type="text" id="name" name="name" th:field="*{studentName}" required>
 
         <label for="dob">Date of Birth:</label>
         <input type="date" id="dob" name="dob" th:field="*{dob}" required>
 
-        <label for="medicalInfo">Medical Information:</label>
-        <textarea id="medicalInfo" name="medicalInfo" th:field="*{medicalInfo}"></textarea>
+        <label for="Blood Group">Blood Group:</label>
+        <textarea id="Blood Group" name="Blood Group" th:field="*{bloodGroup}"></textarea>
 
-        <label for="photoUrl">Photo URL:</label>
-        <input type="text" id="photoUrl" name="photoUrl" th:field="*{photoUrl}">
+        <label for="daysPerWeek">daysPerWeek:</label>
+        <input type="number" id="daysPerWeek" name="daysPerWeek" th:field="*{daysPerWeek}">
 
         <label for="parentId">Parent ID:</label>
         <input type="number" id="parentId" name="parentId" th:value="${parentId}" required>
@@ -82,7 +82,7 @@
         <input type="text" id="standard" name="standard" th:value="*{standard}" required>
 
 
-        <button type="submit">Add Child</button>
+        <button type="submit">Add Student</button>
     </form>
 </div>
 </body>
